12/06/12 Added channelmode +R to scarynet
12/04/20 Added country lookup for servers to support #46@magirc
11/04/22 r432 Added parameter support for !stats and !gstats
11/02/12 r423 Added support for accounts on Charybdis at burst
11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
12/08/05 Threading is now disabled by default (it's only used for mysql and the current implementation
	 has serious issues)
12/07/26 Set country to server's country if connection is localhost
12/07/26 Use geoip's nice ntop/pton wrapper and depend on the existance of the functions, not the OS
12/07/26 More cleanup and rewrites in src/users.c src/admin.c src/bans.c src/base64.c src/GeoIP.c
         src/ChanBanMode.c src/ChanMode.c src/channels.c
12/07/25 More cleanup and rewrite
12/07/24 Lots of cleanup in src/db.c
12/07/23 Rewrote db file handling a little
12/07/23 Automode handled in denora_cmd_join now, removed from other obsolete places (fixed #1433)
12/07/23 Updated sql specific code, more preparations for threadin
12/07/18 Fixed persistent channel support by actually setting the modes in the protocols.
12/07/18 Applied denora_automode to several protocols
12/07/18 Moved automode handler into a separate void and marked some todo's regarding it for later
12/07/18 Added automode handler for logchannel into inspircd11
12/07/17 p10 wants 391 replies (RPL_TIME) in another way. 'Fixed', just need to calc offset somehow.
12/07/17 Don't call events if (umode = o && ((add && was_oper) || (!add && !was_oper)) (should fix #1264)
12/07/17 Updated README
12/07/15 used #ifdef USE_MYSQL in modules seen/lastspoke/ircd_ports (should fix #1429)
12/07/15 File permission detection in mysql_backup.c (should fix #1127)
12/07/15 Added automode for logchan in bahamut
12/07/15 Adding automode for logchan in inspircd12.c (should fix #1418)
12/07/15 Don't init something to NULL after free if you gonna sstrdup something over it anyways.