@@ -18,6 +18,7 @@ Additions
 11/02/11 r416 Added support for ircd-rizon
 
 Changes
+12/08/23 db_getserver() now escapes servername itself where needed
 12/08/05 Threading is now disabled by default (it's only used for mysql and the current implementation
 	 has serious issues)
 12/07/26 Set country to server's country if connection is localhost
